--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Global Stlyes */
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -21,7 +21,6 @@
   src: url(/fonts/Great_Vibes/GreatVibes-Regular.ttf);
 }
 
-
 html {
   font-size: 62.5%;
   --header1: calc(2rem + 1vw);
@@ -37,6 +36,7 @@ html {
 
 h1 {
   font-size: var(--header1);
+  font-family: "vibes";
 }
 
 h2 {
@@ -64,22 +64,89 @@ ul {
   list-style: none;
 }
 
-li, button, label, input, a {
+li,
+button,
+label,
+input,
+a {
   font-size: var(--text);
 }
 
-.flex{
+.flex {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-body{
+body {
   font-family: "frank_ruhl", sans-serif;
 }
 
-h1{
+h1 {
   font-family: "vibes", sans-serif;
 }
 
+/* nav section */
+
+.main-head {
+  min-height: 7vh;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+  z-index: 2;
+  position: relative;
+}
+
+nav {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  padding: 2rem 0rem;
+}
+
+#logo {
+  flex: 1 1 20rem;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  flex: 1 1 20rem;
+}
+
+.hero {
+  min-height: 93vh;
+  width: 95%;
+  margin: 0 0 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.hero-introduction {
+  flex: 2 1 40rem;
+  text-align: center;
+}
+
+.hero-introduction p {
+  padding: 5rem 10rem;
+}
+
+.hero-introduction h2 {
+  padding: 3rem;
+}
+
+.hero-introduction a {
+  padding: 2rem 8rem;
+  border: 2px solid black;
+  margin-bottom: 4rem;
+}
+
+.hero-images {
+  flex: 1 1 40rem;
+}
+
+.hero-lorem {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
