--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Global Stlyes */
+/* Global Styles */
 
 * {
   margin: 0;
@@ -91,8 +91,6 @@ h1 {
 
 .main-head {
   min-height: 7vh;
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
-  z-index: 2;
   position: relative;
 }
 
@@ -114,39 +112,103 @@ nav {
   flex: 1 1 20rem;
 }
 
-.hero {
-  min-height: 93vh;
-  width: 95%;
-  margin: 0 0 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.hero-introduction {
-  flex: 2 1 40rem;
-  text-align: center;
-}
-
-.hero-introduction p {
-  padding: 5rem 10rem;
-}
-
-.hero-introduction h2 {
-  padding: 3rem;
-}
-
-.hero-introduction a {
-  padding: 2rem 8rem;
-  border: 2px solid black;
-  margin-bottom: 4rem;
-}
-
-.hero-images {
-  flex: 1 1 40rem;
-}
-
-.hero-lorem {
+.hero-section img {
+  min-height: 100vh;
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.portraits-section {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  min-height: 100vh;
+  max-height: 100vh;
+}
+
+.portraits-section img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.portrait1 {
+  grid-column: 1/3;
+}
+
+.portrait2 {
+  grid-column: 3/4;
+  grid-row: 1/3;
+}
+
+.portrait3 {
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+
+.portrait5 {
+  grid-column: /3;
+  grid-row: 3/4;
+}
+
+.portrait6 {
+  grid-column: 3/4;
+  grid-row: 3/4;
+}
+
+.portrait-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--text-color);
+  font-family: frank_ruhl-medium;
+}
+
+.landscape-section {
+  min-height: 100vh;
+  max-height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.landscape-section img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.landscape2 {
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+
+.landscape {
+  grid-column: 2/4;
+}
+
+.landscape4 {
+  grid-column: 1/4;
+  grid-row: 3/4;
+}
+
+.landscape-text {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--special-color);
+  font-family: frank_ruhl-medium;
+}
+
+.footer {
+  min-height: 5vh;
+  display: flex;
+  align-items: center;
 }
