--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ nav {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  padding: 0;
 }
 
 .portraits-section {
@@ -247,14 +248,15 @@ nav {
 
 .form button {
   margin: 3rem 0;
-  background-color: var(--background-color);
+  background-color: var(--special-color);
+  border: none;
   color: white;
   padding: 1rem;
   width: 100%;
 }
 
 .contact {
-  min-height: 90vh;
+  min-height: 95vh;
   display: flex;
   flex-wrap: wrap;
 }
@@ -267,9 +269,20 @@ nav {
 
 .footer {
   min-height: 5vh;
+  width: 90%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   color: var(--text-color);
+  padding: 1.5rem 0;
+}
+
+.social-media ul {
+  display: flex;
+}
+
+.social-media li {
+  padding: 0 3rem;
 }
 
 @media {
