--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ h1 {
 /* nav section */
 
 .main-head {
-  min-height: 7vh;
   position: relative;
 }
 
@@ -117,12 +116,15 @@ nav {
   flex: 1 1 20rem;
 }
 
+.hero-section {
+}
+
 .hero-section img {
-  min-height: 100vh;
-  width: 100%;
-  height: 100%;
+  min-height: 95vh;
+  max-height: 95vh;
+  max-width: 100%;
+  min-width: 100%;
   object-fit: cover;
-  padding: 0;
 }
 
 .portraits-section {
@@ -155,7 +157,7 @@ nav {
 }
 
 .portrait5 {
-  grid-column: /3;
+  grid-column: 1/3;
   grid-row: 3/4;
 }
 
@@ -285,5 +287,17 @@ nav {
   padding: 0 3rem;
 }
 
-@media {
+@media only screen and (max-width: 656px) {
+  .main-head {
+    display: flex;
+  }
+
+  .nav-links {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .nav-links li {
+    padding-left: 1rem;
+  }
 }
